src/flutter_recorder.h

FFI_PLUGIN_EXPORT int flutter_recorder_aec_runCalibrationAnalysis(
    unsigned int sampleRate, float *outDelayMs, float *outEchoGain,
    float *outCorrelation);
FFI_PLUGIN_EXPORT void flutter_recorder_aec_resetCalibration();
// Run calibration analysis with impulse response computation
// AecStats defined in enums.h

typedef void (*AecStatsCallback)(AecStats stats);
FFI_PLUGIN_EXPORT void
flutter_recorder_set_aec_stats_callback(AecStatsCallback callback);
FFI_PLUGIN_EXPORT int flutter_recorder_aec_runCalibrationWithImpulse(
    unsigned int sampleRate, float *outDelayMs, float *outEchoGain,
    float *outCorrelation, int *outImpulseLength, int64_t *outCalibratedOffset);
// Get stored impulse response from last calibration
FFI_PLUGIN_EXPORT int flutter_recorder_aec_getImpulseResponse(float *dest,
                                                              int maxLength);
// Apply stored impulse response to AEC filter
FFI_PLUGIN_EXPORT void flutter_recorder_aec_applyImpulseResponse();
// Get captured calibration signals for visualization
FFI_PLUGIN_EXPORT int
flutter_recorder_aec_getCalibrationRefSignal(float *dest, int maxLength);
FFI_PLUGIN_EXPORT int
flutter_recorder_aec_getCalibrationMicSignal(float *dest, int maxLength);
// Set AEC delay from calibration result
FFI_PLUGIN_EXPORT void flutter_recorder_aec_setDelay(float delayMs);
// Apply full calibration result: delay + impulse response
FFI_PLUGIN_EXPORT void flutter_recorder_aec_applyCalibration(float delayMs);
/////////////////////////
/// AEC Testing
/////////////////////////

// Start capturing test data (raw mic + cancelled output)
FFI_PLUGIN_EXPORT void flutter_recorder_aec_startTestCapture(size_t maxSamples);
/////////////////////////
/// AEC Calibration Logging
/////////////////////////

// Get calibration log buffer (returns pointer to internal string, do not free)
FFI_PLUGIN_EXPORT const char *flutter_recorder_aec_getCalibrationLog();
// Clear calibration log buffer
FFI_PLUGIN_EXPORT void flutter_recorder_aec_clearCalibrationLog();
// Stop capturing test data
FFI_PLUGIN_EXPORT void flutter_recorder_aec_stopTestCapture();
// Run test analysis and return metrics
FFI_PLUGIN_EXPORT int flutter_recorder_aec_runTest(
    unsigned int sampleRate, float *outCancellationDb,
    float *outCorrelationBefore, float *outCorrelationAfter, int *outPassed,
    float *outMicEnergyDb, float *outCancelledEnergyDb);
// Get captured test signals for visualization
FFI_PLUGIN_EXPORT int flutter_recorder_aec_getTestMicSignal(float *dest,
                                                            int maxLength);
FFI_PLUGIN_EXPORT int
flutter_recorder_aec_getTestCancelledSignal(float *dest, int maxLength);
// Reset test data
FFI_PLUGIN_EXPORT void flutter_recorder_aec_resetTest();
// VSS-NLMS parameter control for experimentation
// mu_max: Maximum step size (0.0-1.0). Set to 0 to freeze weights.
FFI_PLUGIN_EXPORT void flutter_recorder_aec_setVssMuMax(float mu);
// leakage: Weight decay factor (0.99-1.0). Set to 1.0 for no decay.
FFI_PLUGIN_EXPORT void flutter_recorder_aec_setVssLeakage(float lambda);