lib/src/bindings/flutter_recorder_bindings_generated.dart


  late final _flutter_recorder_aec_runCalibrationAnalysisPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.UnsignedInt, ffi.Pointer<ffi.Float>,
                  ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>)>>(
      'flutter_recorder_aec_runCalibrationAnalysis');
  late final _flutter_recorder_aec_runCalibrationAnalysis =
      _flutter_recorder_aec_runCalibrationAnalysisPtr.asFunction<
          int Function(int, ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>)>();

  void flutter_recorder_aec_resetCalibration() {
    return _flutter_recorder_aec_resetCalibration();
  }

  late final _flutter_recorder_aec_resetCalibrationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_aec_resetCalibration');
  late final _flutter_recorder_aec_resetCalibration =
      _flutter_recorder_aec_resetCalibrationPtr.asFunction<void Function()>();

  void flutter_recorder_set_aec_stats_callback(
    AecStatsCallback callback,
  ) {
    return _flutter_recorder_set_aec_stats_callback(
      callback,
    );
  }

  late final _flutter_recorder_set_aec_stats_callbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(AecStatsCallback)>>(
          'flutter_recorder_set_aec_stats_callback');
  late final _flutter_recorder_set_aec_stats_callback =
      _flutter_recorder_set_aec_stats_callbackPtr
          .asFunction<void Function(AecStatsCallback)>();

  int flutter_recorder_aec_runCalibrationWithImpulse(
    int sampleRate,
    ffi.Pointer<ffi.Float> outDelayMs,
    ffi.Pointer<ffi.Float> outEchoGain,
    ffi.Pointer<ffi.Float> outCorrelation,
    ffi.Pointer<ffi.Int> outImpulseLength,
    ffi.Pointer<ffi.Int64> outCalibratedOffset,
  ) {
    return _flutter_recorder_aec_runCalibrationWithImpulse(
      sampleRate,
      outDelayMs,
      outEchoGain,
      outCorrelation,
      outImpulseLength,
      outCalibratedOffset,
    );
  }

  late final _flutter_recorder_aec_runCalibrationWithImpulsePtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  ffi.UnsignedInt,
                  ffi.Pointer<ffi.Float>,
                  ffi.Pointer<ffi.Float>,
                  ffi.Pointer<ffi.Float>,
                  ffi.Pointer<ffi.Int>,
                  ffi.Pointer<ffi.Int64>)>>(
      'flutter_recorder_aec_runCalibrationWithImpulse');
  late final _flutter_recorder_aec_runCalibrationWithImpulse =
      _flutter_recorder_aec_runCalibrationWithImpulsePtr.asFunction<
          int Function(
              int,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int64>)>();

  /// Get stored impulse response from last calibration
  int flutter_recorder_aec_getImpulseResponse(
    ffi.Pointer<ffi.Float> dest,
    int maxLength,
  ) {
    return _flutter_recorder_aec_getImpulseResponse(
      dest,
      maxLength,
    );
  }

  late final _flutter_recorder_aec_getImpulseResponsePtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Float>, ffi.Int)>>(
      'flutter_recorder_aec_getImpulseResponse');
  late final _flutter_recorder_aec_getImpulseResponse =
      _flutter_recorder_aec_getImpulseResponsePtr
          .asFunction<int Function(ffi.Pointer<ffi.Float>, int)>();

  /// Apply stored impulse response to AEC filter
  void flutter_recorder_aec_applyImpulseResponse() {
    return _flutter_recorder_aec_applyImpulseResponse();
  }

  late final _flutter_recorder_aec_applyImpulseResponsePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_aec_applyImpulseResponse');
  late final _flutter_recorder_aec_applyImpulseResponse =
      _flutter_recorder_aec_applyImpulseResponsePtr
          .asFunction<void Function()>();

  /// Get captured calibration signals for visualization
  int flutter_recorder_aec_getCalibrationRefSignal(
    ffi.Pointer<ffi.Float> dest,
    int maxLength,
  ) {
    return _flutter_recorder_aec_getCalibrationRefSignal(
      dest,
      maxLength,
    );
  }

  late final _flutter_recorder_aec_getCalibrationRefSignalPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Float>, ffi.Int)>>(
      'flutter_recorder_aec_getCalibrationRefSignal');
  late final _flutter_recorder_aec_getCalibrationRefSignal =
      _flutter_recorder_aec_getCalibrationRefSignalPtr
          .asFunction<int Function(ffi.Pointer<ffi.Float>, int)>();

  int flutter_recorder_aec_getCalibrationMicSignal(
    ffi.Pointer<ffi.Float> dest,
    int maxLength,
  ) {
    return _flutter_recorder_aec_getCalibrationMicSignal(
      dest,
      maxLength,
    );
  }

  late final _flutter_recorder_aec_getCalibrationMicSignalPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Float>, ffi.Int)>>(
      'flutter_recorder_aec_getCalibrationMicSignal');
  late final _flutter_recorder_aec_getCalibrationMicSignal =
      _flutter_recorder_aec_getCalibrationMicSignalPtr
          .asFunction<int Function(ffi.Pointer<ffi.Float>, int)>();

  /// Set AEC delay from calibration result
  void flutter_recorder_aec_setDelay(
    double delayMs,
  ) {
    return _flutter_recorder_aec_setDelay(
      delayMs,
    );
  }

  late final _flutter_recorder_aec_setDelayPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
          'flutter_recorder_aec_setDelay');
  late final _flutter_recorder_aec_setDelay =
      _flutter_recorder_aec_setDelayPtr.asFunction<void Function(double)>();

  /// Apply full calibration result: delay + impulse response
  void flutter_recorder_aec_applyCalibration(
    double delayMs,
  ) {
    return _flutter_recorder_aec_applyCalibration(
      delayMs,
    );
  }

  late final _flutter_recorder_aec_applyCalibrationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
          'flutter_recorder_aec_applyCalibration');
  late final _flutter_recorder_aec_applyCalibration =
      _flutter_recorder_aec_applyCalibrationPtr
          .asFunction<void Function(double)>();

  /// Start capturing test data (raw mic + cancelled output)
  void flutter_recorder_aec_startTestCapture(
    int maxSamples,
  ) {
    return _flutter_recorder_aec_startTestCapture(
      maxSamples,
    );
  }

  late final _flutter_recorder_aec_startTestCapturePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Size)>>(
          'flutter_recorder_aec_startTestCapture');
  late final _flutter_recorder_aec_startTestCapture =
      _flutter_recorder_aec_startTestCapturePtr
          .asFunction<void Function(int)>();

  /// Get calibration log buffer (returns pointer to internal string, do not free)
  ffi.Pointer<ffi.Char> flutter_recorder_aec_getCalibrationLog() {
    return _flutter_recorder_aec_getCalibrationLog();
  }

  late final _flutter_recorder_aec_getCalibrationLogPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'flutter_recorder_aec_getCalibrationLog');
  late final _flutter_recorder_aec_getCalibrationLog =
      _flutter_recorder_aec_getCalibrationLogPtr
          .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Clear calibration log buffer
  void flutter_recorder_aec_clearCalibrationLog() {
    return _flutter_recorder_aec_clearCalibrationLog();
  }

  late final _flutter_recorder_aec_clearCalibrationLogPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_aec_clearCalibrationLog');
  late final _flutter_recorder_aec_clearCalibrationLog =
      _flutter_recorder_aec_clearCalibrationLogPtr
          .asFunction<void Function()>();

  /// Stop capturing test data
  void flutter_recorder_aec_stopTestCapture() {
    return _flutter_recorder_aec_stopTestCapture();
  }

  late final _flutter_recorder_aec_stopTestCapturePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_aec_stopTestCapture');
  late final _flutter_recorder_aec_stopTestCapture =
      _flutter_recorder_aec_stopTestCapturePtr.asFunction<void Function()>();

  /// Run test analysis and return metrics
  int flutter_recorder_aec_runTest(
    int sampleRate,
    ffi.Pointer<ffi.Float> outCancellationDb,
    ffi.Pointer<ffi.Float> outCorrelationBefore,
    ffi.Pointer<ffi.Float> outCorrelationAfter,
    ffi.Pointer<ffi.Int> outPassed,
    ffi.Pointer<ffi.Float> outMicEnergyDb,
    ffi.Pointer<ffi.Float> outCancelledEnergyDb,
  ) {
    return _flutter_recorder_aec_runTest(
      sampleRate,
      outCancellationDb,
      outCorrelationBefore,
      outCorrelationAfter,
      outPassed,
      outMicEnergyDb,
      outCancelledEnergyDb,
    );
  }

  late final _flutter_recorder_aec_runTestPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.UnsignedInt,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>)>>('flutter_recorder_aec_runTest');
  late final _flutter_recorder_aec_runTest =
      _flutter_recorder_aec_runTestPtr.asFunction<
          int Function(
              int,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>)>();

  /// Get captured test signals for visualization
  int flutter_recorder_aec_getTestMicSignal(
    ffi.Pointer<ffi.Float> dest,
    int maxLength,
  ) {
    return _flutter_recorder_aec_getTestMicSignal(
      dest,
      maxLength,
    );
  }

  late final _flutter_recorder_aec_getTestMicSignalPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Float>, ffi.Int)>>(
      'flutter_recorder_aec_getTestMicSignal');
  late final _flutter_recorder_aec_getTestMicSignal =
      _flutter_recorder_aec_getTestMicSignalPtr
          .asFunction<int Function(ffi.Pointer<ffi.Float>, int)>();

  int flutter_recorder_aec_getTestCancelledSignal(
    ffi.Pointer<ffi.Float> dest,
    int maxLength,
  ) {
    return _flutter_recorder_aec_getTestCancelledSignal(
      dest,
      maxLength,
    );
  }

  late final _flutter_recorder_aec_getTestCancelledSignalPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Float>, ffi.Int)>>(
      'flutter_recorder_aec_getTestCancelledSignal');
  late final _flutter_recorder_aec_getTestCancelledSignal =
      _flutter_recorder_aec_getTestCancelledSignalPtr
          .asFunction<int Function(ffi.Pointer<ffi.Float>, int)>();

  /// Reset test data
  void flutter_recorder_aec_resetTest() {
    return _flutter_recorder_aec_resetTest();
  }

  late final _flutter_recorder_aec_resetTestPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_aec_resetTest');
  late final _flutter_recorder_aec_resetTest =
      _flutter_recorder_aec_resetTestPtr.asFunction<void Function()>();

  /// VSS-NLMS parameter control for experimentation
  /// mu_max: Maximum step size (0.0-1.0). Set to 0 to freeze weights.
  void flutter_recorder_aec_setVssMuMax(
    double mu,
  ) {
    return _flutter_recorder_aec_setVssMuMax(
      mu,
    );
  }

  late final _flutter_recorder_aec_setVssMuMaxPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
          'flutter_recorder_aec_setVssMuMax');
  late final _flutter_recorder_aec_setVssMuMax =
      _flutter_recorder_aec_setVssMuMaxPtr.asFunction<void Function(double)>();

  /// leakage: Weight decay factor (0.99-1.0). Set to 1.0 for no decay.
  void flutter_recorder_aec_setVssLeakage(
    double lambda,
  ) {
    return _flutter_recorder_aec_setVssLeakage(
      lambda,
    );
  }
